# x211-meter

./: README.en.md  README.md  const.py  hacs.json  info.md
Android/XT211_Mqtt_Reader/: XT211_Mqtt_Reader.ino  config.h  connections.cpp  connections.h  data_handling.cpp  data_handling.h  dlms_parser.cpp  dlms_parser.h  dlms_read_packet.cpp  dlms_read_packet.h  power_management.cpp  power_management.h
ESP-IDF/: README.md
ESP-IDF/2026-05-15/elektromer_mqtt/: .clangd  CMakeLists.txt  idfbuild.bat  mqttexample.txt  sdkconfig - Kopie.home  sdkconfig - Kopie.test  sdkconfig.home  sdkconfig.old  sdkconfig.test  sdkconfig.testc3  sdkconfig.work
ESP-IDF/2026-05-15/elektromer_mqtt/components/custom_battery/: custom_battery.c
ESP-IDF/2026-05-15/elektromer_mqtt/components/custom_comm/: CMakeLists.txt  custom_comm.c
ESP-IDF/2026-05-15/elektromer_mqtt/components/custom_comm/include/: custom_comm.h
ESP-IDF/2026-05-15/elektromer_mqtt/components/custom_config/: custom_config.h
ESP-IDF/2026-05-15/elektromer_mqtt/components/custom_led/: custom_led.c
ESP-IDF/2026-05-15/elektromer_mqtt/main/: Kconfig.projbuild  idf_component.yml  main.c  main.c.old1  main.c.old4  main.c.old5
ESP-IDF/2026-05-15/elektromer_mqtt/profiles/: home  test  testc3
ESP-IDF/elektromer_mqtt/: .clangd  .cproject  .project  .~lock.partitions.csv#  CMakeLists.txt  README.md  log.elektromer_mqtt_test.20251031204016.txt  log.elektromer_mqtt_test.20251103071916.txt  log.elektromer_mqtt_test.20251103090813.txt  log.elektromer_mqtt_test.20251103104807.txt  partitions.csv  psoreadme.txt  sdkconfig  sdkconfig.home  sdkconfig.old  sdkconfig.test  sdkconfig.work
ESP-IDF/elektromer_mqtt/components/custom_battery/: CMakeLists.txt  custom_battery.c
ESP-IDF/elektromer_mqtt/components/custom_comm/: custom_comm.c
ESP-IDF/elektromer_mqtt/components/custom_config/: custom_config.h
ESP-IDF/elektromer_mqtt/components/custom_dlms/: CMakeLists.txt  custom_dlms.c  dlms_parser.c
ESP-IDF/elektromer_mqtt/components/custom_led/: CMakeLists.txt  custom_led.c
ESP-IDF/elektromer_mqtt/components/custom_lora/: custom_lora.c
ESP-IDF/elektromer_mqtt/components/custom_mqtt/: CMakeLists.txt  custom_mqtt.c
ESP-IDF/elektromer_mqtt/components/custom_mqtt/include/: custom_mqtt.h
ESP-IDF/elektromer_mqtt/components/custom_ota/: CMakeLists.txt  custom_ota.c
ESP-IDF/elektromer_mqtt/components/custom_rs485/: custom_rs485.c
ESP-IDF/elektromer_mqtt/components/custom_storage/: CMakeLists.txt  custom_storage.c
ESP-IDF/elektromer_mqtt/components/custom_time/: custom_time.c
ESP-IDF/elektromer_mqtt/components/custom_wifi/: custom_wifi.c
ESP-IDF/elektromer_mqtt/components/my_debug/: CMakeLists.txt  my_debug.c
ESP-IDF/elektromer_mqtt/main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.c.old  main.c.old2  main.c.old3
ESP-IDF/elektromer_mqtt/profiles/: work
custom_componenes/xt211/: __init__.py  mqtt_handler.py  sensor.py
custom_components/xt211/: __init__.py  config_flow.py  const.py  manifest.json  mqtt_handler.py  sensor.py
(+23 files in other folders)
